--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -70,13 +70,13 @@
           .icon {
             @include square(62px);
             opacity: 0;
-            cursor: pointer;
+            cursor: auto;
             &-text {
               color: rgba($font-initialize-color, 0.8);
               text-shadow: 0px 2px 2px rgba($font-initialize-color, 0.12);
               font-size: 2.8rem;
               line-height: 62px;
-              @include custom-position(absolute, $top: 60px, $left: 72px, $right: 10px);
+              @include custom-position(absolute, $top: 60px, $left: 80px, $right: 10px);
               .texty span {
                 padding-right: 2px;
               }
@@ -204,6 +204,18 @@
         -webkit-box-direction: normal;
         @include prefix(flex-direction, row);
       }
+      &-logo-animation > .letters > .logo-icon {
+        .icon {
+          &-text {
+            font-size: 1.9rem;
+          }
+        }
+      }
+      &-footer-info {
+        .description {
+          font-size: 1.1rem;
+        }
+      }
     }
   }
 }
@@ -219,13 +231,13 @@
       }
       &-footer-info {
         .description {
-          font-size: 1rem;
+          font-size: 0.8rem;
         }
       }
     }
   }
 }
-@media (max-width: 360px) {
+@media (max-width: 400px) {
   :global {
     .home {
       &-logo-animation > .letters > .logo-icon {
@@ -237,7 +249,7 @@
       }
       &-footer-info {
         .description {
-          font-size: 0.9rem;
+          font-size: 0.6rem;
         }
       }
     }
